feat: ad d monthly total revenues by year
